[project]
name = "neon_poker"
version = "0.1.0"
description = "neon_poker using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
neon_poker = "neon_poker.main:run"
run_crew = "neon_poker.main:run"
train = "neon_poker.main:train"
replay = "neon_poker.main:replay"
test = "neon_poker.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
